# vgg16

./: README.md
cpu/: Makefile  Operand.hpp
gpu/: CMakeLists.txt  test_code.cu  vgg_custom.cu
